# VortexCut

./: .gitignore  CLAUDE.md  GUI_DESIGN_SPEC.md  IMPLEMENTATION_GUIDE.md  INTERACTION_FLOWS.md  LICENSE  README.md  UI_STRUCTURE.md  VortexCut.sln
.claude/: settings.local.json
VortexCut.Core/Interfaces/: IUndoableAction.cs
VortexCut.Core/Models/: ClipModel.cs  KeyframeModel.cs  MarkerModel.cs  MediaItem.cs  Project.cs  SubtitleClipModel.cs  SubtitleStyle.cs  TrackModel.cs
VortexCut.Core/Serialization/: ProjectSerializer.cs
VortexCut.Core/Services/: SrtParser.cs
VortexCut.Interop/: NativeMethods.cs  VortexCut.Interop.csproj
VortexCut.Interop/Services/: ExportService.cs  RenderService.cs  TimelineService.cs
VortexCut.Interop/Types/: NativeTypes.cs
VortexCut.Tests/: VortexCut.Tests.csproj
VortexCut.Tests/Helpers/: ConditionalFactAttribute.cs
VortexCut.UI/: App.axaml  App.axaml.cs  VortexCut.UI.csproj
docs/: TECHSPEC.md  THUMBNAIL_ENGINE_REFACTORING_PLAN.md  THUMBNAIL_FILMSTRIP_DESIGN.md
rust-engine/: Cargo.toml  build.rs
rust-engine/.cargo/: config.toml
rust-engine/src/: lib.rs
rust-engine/src/encoding/: exporter.rs
rust-engine/src/ffi/: audio.rs  exporter.rs  mod.rs  renderer.rs  thumbnail.rs  timeline.rs  types.rs
rust-engine/src/ffmpeg/: decoder.rs  mod.rs
rust-engine/src/rendering/: effects.rs  mod.rs  renderer.rs
rust-engine/src/subtitle/: mod.rs  overlay.rs
rust-engine/src/timeline/: clip.rs  mod.rs  timeline.rs  track.rs
rust-engine/src/utils/: mod.rs
scripts/: build-rust.ps1  build-rust.sh
(+60 files in other folders)
